<resources>

    <string name="app_name">BreakInUse</string>
    <string name="title_activity_home">BreakInUse!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">User Accounts</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="sign_in_button_google_text">Sign in with Google</string>
    <string name="sign_in_button_facebook_text">Sign in with Facebook</string>
    <string name="action_user_accounts">User Accounts</string>
    <string name="facebook_app_id">1478216152476522</string>
    <string name="parse_app_id">B2T3AZ1oLq0tpesDf7E1J6rKp1qUdcYyBjikNFQt</string>
    <string name="parse_client_key">0bVcYoBptnceGHj1voYEm3Xutd4dbsbeR9AqRbXm</string>
    <string name="sign_in_email_emailID_hint">Your Email ID</string>
    <string name="sign_in_email_pass_hint">Your Password</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="logged_in_google">Logged in through Google</string>
    <string name="logged_in_facebook">Logged in through FB</string>
    <string name="logged_in_email">Logged in through Email</string>
    <string name="logged_out">Logged Out</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="new_to_breakInUse_text">New to BreakInUse! ? Click here to Sign Up</string>
    <string name="existing_user_breakInUse_text">Existing User ? Click here to Login</string>
    <string name="refresh_text">Refresh</string>
    <string name="title_activity_news_article">NewsArticle</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preferences_notifications_title">Enable Notifications</string>
    <string name = "preferences_topics_title">Follow Topics</string>
    <string name="preferences_notifications_summary_off">Notifications Disabled</string>
    <string name="preferences_notifications_summary_on">Notifications Enabled</string>
    <string name="newsFeed_tab1_title">News Feed</string>
    <string name="newsFeed_tab2_title">Favourite Feed</string>
    <string name="sync_account_type">breakinuse.example.com</string>
    <string name="content_authority">com.example.android.breakinuse</string>
    <string name="share_action_title">Share</string>
    <string name="newsFeedItem_textView_saveText">Tap here to save</string>
    <string name="newsFeedItem_textView_deleteText">Saved - Tap here to delete</string>
    <string name="newsFeed_textView_text">No NewsFeed to display. Please check your internet connection and refresh after connecting.</string>
    <string name="savedNewsFeed_textView_text">There is no article saved currently. Save an article to read later.</string>
    <string name="favouriteNewsFeed_textView_text">No FavouriteFeed to display. No matching articles may be available or you need to refresh after connecting to internet.</string>
    <string name="savedNewsFeedItem_textView_deleteText">Saved - Tap here to delete</string>
    <string name="textView_forgotPassword">Forgot password ? Click Here</string>
    <string name="forgotPassword_breakInUse_text">Forgot your password ? Click here!</string>
    <string name="resetPassword_button_text">Reset Password!</string>
    <string name="shareDialogBoxText">Share with</string>
    <string name="newsArticleFragment_saveButton_title">Save</string>

</resources>
