<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.breakinuse.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id = "@+id/loginActivity_toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <com.breakinuse.widget.TypefaceEditText
        xmlns:nameSpace="http://schemas.android.com/apk/res/com.breakinuse"
        nameSpace:typeface = "RobotoCondensedRegular.ttf"
        android:id="@+id/sign_in_email_emailID"
        android:inputType="textEmailAddress"
        android:hint="@string/sign_in_email_emailID_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <com.breakinuse.widget.TypefaceEditText
        xmlns:nameSpace="http://schemas.android.com/apk/res/com.breakinuse"
        nameSpace:typeface = "RobotoCondensedRegular.ttf"
        android:id="@+id/sign_in_email_password"
        android:inputType="text|textPassword"
        android:hint="@string/sign_in_email_pass_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <com.breakinuse.widget.TypefaceButton
        xmlns:nameSpace="http://schemas.android.com/apk/res/com.breakinuse"
        nameSpace:typeface = "RobotoCondensedRegular.ttf"
        android:id="@+id/sign_in_button_email"
        android:text="@string/sign_in_button_text"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.breakinuse.widget.TypefaceButton
        xmlns:nameSpace="http://schemas.android.com/apk/res/com.breakinuse"
        nameSpace:typeface = "RobotoCondensedRegular.ttf"
        android:id="@+id/sign_up_button_email"
        android:text="@string/sign_up_button_text"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.breakinuse.widget.TypefaceButton
        xmlns:nameSpace="http://schemas.android.com/apk/res/com.breakinuse"
        nameSpace:typeface = "RobotoCondensedRegular.ttf"
        android:id="@+id/resetPassword_button_email"
        android:text="@string/resetPassword_button_text"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.breakinuse.widget.TypefaceTextView
        xmlns:nameSpace="http://schemas.android.com/apk/res/com.breakinuse"
        nameSpace:typeface = "RobotoCondensedRegular.ttf"
        android:id="@+id/new_to_breakInUse"
        android:text="@string/new_to_breakInUse_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <com.breakinuse.widget.TypefaceTextView
        xmlns:nameSpace="http://schemas.android.com/apk/res/com.breakinuse"
        nameSpace:typeface = "RobotoCondensedRegular.ttf"
        android:id="@+id/existing_user_breakInUse"
        android:text="@string/existing_user_breakInUse_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <com.breakinuse.widget.TypefaceTextView
        xmlns:nameSpace="http://schemas.android.com/apk/res/com.breakinuse"
        nameSpace:typeface = "RobotoCondensedRegular.ttf"
        android:id="@+id/forgotPassword_breakInUse"
        android:text="@string/forgotPassword_breakInUse_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

</LinearLayout>
